extended installation scetion